--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,69 +1,51 @@
 <!doctype html>
 <html lang="{{ metadata.language }}">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>{{ title or metadata.title }}</title>
-		<meta name="description" content="{{ description or metadata.description }}">
-		<link rel="alternate" href="/feed/feed.xml" type="application/atom+xml" title="{{ metadata.title }}">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>{{ title or metadata.title }}</title>
+<meta name="description" content="{{ description or metadata.description }}">
+<link rel="alternate" href="/feed/feed.xml" type="application/atom+xml" title="{{ metadata.title }}">
+<link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 
-		{#- Uncomment this if you’d like folks to know that you used Eleventy to build your site!  #}
-		{#- <meta name="generator" content="{{ eleventy.generator }}"> #}
+{#- Add the contents of CSS files to the bundle #}
+<style>{% include "css/index.css" %}</style>
 
-		{#-
-		Plain-text bundles are provided via the `eleventy-plugin-bundle` plugin:
-		1. CSS:
-			* Add to a per-page bundle using `{% css %}{% endcss %}`
-			* Retrieve bundle content using `{% getBundle "css" %}` or `{% getBundleFileUrl "css" %}`
-		2. Or for JavaScript:
-			* Add to a per-page bundle using `{% js %}{% endjs %}`
-			* Retrieve via `{% getBundle "js" %}` or `{% getBundleFileUrl "js" %}`
-		3. Learn more: https://github.com/11ty/eleventy-plugin-bundle
-		#}
+{#- Render the CSS bundle using inlined CSS #}
+<style>{% getBundle "css" %}</style>
+</head>
+<body>
+<a href="#skip" class="visually-hidden">Skip to main content</a>
 
-		{#- Add an arbitrary string to the bundle #}
-		<style>/* This is an arbitrary CSS string added to the bundle */</style>
-		{#- Add the contents of a file to the bundle #}
-		<style>{% include "css/index.css" %}</style>
-		{#- Or you can add from node_modules #}
-		{# <style>{% include "node_modules/prismjs/themes/prism-okaidia.css" %}</style> #}
+<header>
+<a href="/" class="logo">
+<img src="/logos/JessicaAkermanRectangle.svg" alt="{{ metadata.title }}" width="600" height="100">
+</a>
 
-		{#- Render the CSS bundle using inlined CSS (for the fastest site performance in production) #}
-		<style>{% getBundle "css" %}</style>
-		{#- Renders the CSS bundle using a separate file, if you can't set CSP directive style-src: 'unsafe-inline' #}
-		{#- <link rel="stylesheet" href="{% getBundleFileUrl "css" %}"> #}
+<nav>
+<h2 class="visually-hidden">Navigation menu</h2>
+<ul class="nav">
+<li class="nav-item"><a href="/"{% if page.url == '/' %} aria-current="page"{% endif %}>Home</a></li>
+<li class="nav-item"><a href="/sculpture/"{% if '/sculpture/' in page.url %} aria-current="page"{% endif %}>Sculpture</a></li>
+<li class="nav-item"><a href="/public-commissions/"{% if '/public-commissions/' in page.url %} aria-current="page"{% endif %}>Public commissions</a></li>
+<li class="nav-item"><a href="/works-on-paper/"{% if '/works-on-paper/' in page.url %} aria-current="page"{% endif %}>Works on paper</a></li>
+<li class="nav-item"><a href="/shop/"{% if '/shop/' in page.url %} aria-current="page"{% endif %}>SHOP</a></li>
+<li class="nav-item"><a href="/archive/"{% if '/archive/' in page.url %} aria-current="page"{% endif %}>Archive</a></li>
+<li class="nav-item"><a href="/about/"{% if '/about/' in page.url %} aria-current="page"{% endif %}>About</a></li>
+<li class="nav-item"><a href="/connect/"{% if '/connect/' in page.url %} aria-current="page"{% endif %}>Connect</a></li>
+<li class="nav-item"><a href="/texts/"{% if '/texts/' in page.url %} aria-current="page"{% endif %}>Texts</a></li>
+</ul>
+</nav>
+</header>
 
-		{#- Add the heading-anchors web component to the JavaScript bundle #}
-		<script type="module">{% include "node_modules/@zachleat/heading-anchors/heading-anchors.js" %}</script>
-	</head>
-	<body>
-		<a href="#skip" class="visually-hidden">Skip to main content</a>
+<main id="skip">
+{{ content | safe }}
+</main>
 
-		<header>
-			<a href="/" class="home-link">{{ metadata.title }}</a>
+<footer>
+<p>&copy; 2025 {{ metadata.author.name }} | All rights reserved</p>
+</footer>
 
-			{#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
-			<nav>
-				<h2 class="visually-hidden">Top level navigation menu</h2>
-				<ul class="nav">
-				{%- for entry in collections.all | eleventyNavigation %}
-					<li class="nav-item"><a href="{{ entry.url }}"{% if entry.url == page.url %} aria-current="page"{% endif %}>{{ entry.title }}</a></li>
-				{%- endfor %}
-				</ul>
-			</nav>
-		</header>
-
-		<main id="skip">
-			<heading-anchors>
-				{{ content | safe }}
-			</heading-anchors>
-		</main>
-
-		<footer>
-			<p><em>Built with <a href="https://www.11ty.dev/">{{ eleventy.generator }}</a></em></p>
-		</footer>
-
-		<!-- This page `{{ page.url }}` was built on {% currentBuildDate %} -->
-		<script type="module" src="{% getBundleFileUrl "js" %}"></script>
-	</body>
+<script type="module" src="{% getBundleFileUrl "js" %}"></script>
+</body>
 </html>
