--- a/src/content/tags.njk
+++ b/src/content/tags.njk
@@ -1,8 +1,23 @@
-<h1>Tags</h1>
+---
+pagination:
+  data: collections
+  size: 1
+  alias: tag
+  filter:
+    - all
+    - nav
+    - post
+    - posts
+    - tagList
+  addAllPagesToCollections: true
+layout: layouts/base.njk
+eleventyComputed:
+  title: Tagged "{{ tag }}"
+permalink: /tags/page/{{ tag | slugify }}/
+---
+<h1>Tagged "{{ tag }}"</h1>
 
-<ul>
-{% for tag in collections | getKeys | filterTagList | sortAlphabetically %}
-	{% set tagUrl %}/tags/{{ tag | slugify }}/{% endset %}
-	<li><a href="{{ tagUrl }}" class="post-tag">{{ tag }}</a></li>
-{% endfor %}
-</ul>
+{% set postslist = collections[tag] %}
+{% include "postslist.njk" %}
+
+<p>See <a href="/tags/">all tags</a>.</p>
