--- a/src/content/home-archived.njk
+++ b/src/content/home-archived.njk
@@ -1,8 +1,11 @@
 ---
-layout: layouts/home.njk
+title: "Home - Archive"
+layout: layouts/base.njk
 eleventyNavigation:
-  key: Home
-  order: 1
+  key: "Home - Archive"
+  order: 10
+  parent: Archive
+
 ---
 
 <div class="projects-preview">
