--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -62,5 +62,6 @@
   </footer>
 
   <script type="module" src="{% getBundleFileUrl "js" %}"></script>
+  <script src="/js/navigation.js"></script>
 </body>
 </html>
